Ignore tags created by etags

--- a/.gitignore
+++ b/.gitignore
@@ -154,4 +154,5 @@ sympy-plots-for-*.tex/
 ## libreoffice lock files
 .~lock*
 
-
+# Ignore tags created by etags, ctags, gtags (GNU global) and cscope
+TAGS
